# AI_VOICE_ASSISTANT

./: main.py  pyproject.toml
templates/: index.html
